# QtMessenger

./: .gitignore  CMakeLists.txt  README.md
sources/: Chat.cpp  Chat.h  Message.cpp  Message.h  Program.cpp  Program.h  User.cpp  User.h  main.cpp  mainwindow.h
